--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,19 @@
-asgiref==3.2.10
-boto==2.49.0
-boto3==1.14.10
-botocore==1.17.10
+boto3==1.9.40
+botocore==1.12.40
 dj-database-url==0.5.0
-Django==3.0.7
+Django==2.1.3
 django-disqus==0.5
-django-storages==1.9.1
-docutils==0.15.2
-gunicorn==20.0.4
-jmespath==0.10.0
-mock==4.0.2
-Pillow==7.1.2
-psycopg2-binary==2.8.6
-python-dateutil==2.8.1
-pytz==2020.1
-s3transfer==0.3.3
-six==1.15.0
-sqlparse==0.3.1
-urllib3==1.25.9
-whitenoise==5.2.0
+django-storages==1.7.1
+docutils==0.14
+gunicorn==19.9.0
+jmespath==0.9.3
+mock==2.0.0
+pbr==5.1.1
+Pillow==5.3.0
+psycopg2-binary==2.7.5
+python-dateutil==2.7.5
+pytz==2018.7
+s3transfer==0.1.13
+six==1.11.0
+urllib3==1.24.1
+whitenoise==4.1
